tests/cases/compiler-development/artifact/errors/diagnostic-field-borrow-conflict.diagnostic
diagnostic error code=O0001 family=ownership message="cannot mutably borrow already borrowed field 'pair.0'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/borrowing/errors/field-borrow-conflict.ari" display="tests/cases/borrowing/errors/field-borrow-conflict.ari" bytes=259
  Label index=0 role=primary source_id=0 source="tests/cases/borrowing/errors/field-borrow-conflict.ari" line=13 column=16 end_line=13 end_column=19 byte_start=210 byte_end=213 message=""
  Snippet label=0 text="  --> tests/cases/borrowing/errors/field-borrow-conflict.ari:13:16\n    |\n 13 |   let unique = ref mut pair.left;\n    |                ^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/borrowing/errors/field-borrow-conflict.ari" line=11 column=7 end_line=11 end_column=11 byte_start=128 byte_end=132 message="borrowed binding 'pair' was declared here"
  Snippet label=1 text="  --> tests/cases/borrowing/errors/field-borrow-conflict.ari:11:7\n    |\n 11 |   var pair = Pair { left: 1, right: 2 };\n    |       ^^^^"
  Note index=0 location=none message="borrow state is tracked for each binding and overlapping aggregate field"
  Help index=0 location=none message="end existing overlapping field borrows before taking a mutable borrow"
